--- a/index.html
+++ b/index.html
@@ -71,10 +71,6 @@
       <p>Designed Apex logic to automate bulk-safe workflows and reduce manual intervention.</p>
     </div>
     <div class="project">
-      <h3>Regal Lab Branding</h3>
-      <p>Created logo, layout, and messaging for Regal Lab’s identity with a modern aesthetic.</p>
-    </div>
-    <div class="project">
       <h3>API Regression Suite</h3>
       <p>Built a robust API test suite using Rest Assured and TestNG, integrated with CI/CD pipelines.</p>
     </div>
@@ -85,7 +81,7 @@
     <p>Email: jainhardik037@gmail.com</p>
     <p>Phone: 9413968037</p>
     <p>Location: Udaipur, Rajasthan</p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/hardikjain" target="_blank">linkedin.com/in/hardikjain</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/hardikjain037" target="_blank">linkedin.com/in/hardikjain</a></p>
   </section>
 
   <footer>
