--- a/index.html
+++ b/index.html
@@ -2,18 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Hardik Jain | SDET Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hardik Jain | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <h1>Hardik Jain</h1>
-    <p>SDET | Salesforce QA | Automation Specialist</p>
+    <p>Salesforce QA | Apex Developer | Automation Specialist</p>
     <nav>
       <a href="#about">About</a>
-      <a href="#experience">Experience</a>
-      <a href="#skills">Skills</a>
       <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
@@ -21,71 +19,35 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>
-      I'm a dynamic SDET with 3.8+ years of experience in automation, Salesforce QA, and scalable test frameworks. I specialize in Java, Selenium, API testing, and CI/CD pipelines. I’m also the founder of Regal Lab Data Recovery Services, where I lead branding and technical delivery.
-    </p>
-  </section>
-
-  <section id="experience">
-    <h2>Work Experience</h2>
-    <div class="job">
-      <h3>Quality Engineering Analyst – Infosys (2024–Present)</h3>
-      <ul>
-        <li>Reduced manual testing by 75% via Selenium automation.</li>
-        <li>Led a team of 5 QA engineers and delivered projects within SLA.</li>
-        <li>Integrated automation into CI/CD pipelines using Jenkins and GitHub Actions.</li>
-      </ul>
-    </div>
-    <div class="job">
-      <h3>Software Quality Engineer – Infosys (2021–2024)</h3>
-      <ul>
-        <li>Specialized in Salesforce QA and API testing with Rest Assured.</li>
-        <li>Used Selenium Box, Qtest, and Jira for test management.</li>
-        <li>Led regression testing and collaborated with dev teams.</li>
-      </ul>
-    </div>
-    <div class="job">
-      <h3>Founder – Regal Lab Data Recovery Services</h3>
-      <ul>
-        <li>Designed brand identity and client messaging.</li>
-        <li>Delivered technical services with a focus on trust and quality.</li>
-      </ul>
-    </div>
-  </section>
-
-  <section id="skills">
-    <h2>Skills</h2>
-    <ul>
-      <li>Java, Selenium WebDriver, Rest Assured, SoapUI</li>
-      <li>CI/CD: Jenkins, GitHub Actions</li>
-      <li>Salesforce QA, Apex, LWC</li>
-      <li>TestNG, Cucumber (BDD), Agile methodologies</li>
-      <li>MySQL, Qtest, JIRA, GitHub Copilot</li>
-    </ul>
+    <p>I’m a results-driven SDET with 3.8+ years of experience in automation, Salesforce QA, and Apex development. I specialize in scalable testing frameworks and secure coding practices.</p>
   </section>
 
   <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>Salesforce Maintenance Automation</h3>
-      <p>Designed Apex logic to automate bulk-safe workflows and reduce manual intervention.</p>
+    <h2>Featured Projects</h2>
+    <div class="project-card">
+      <h3>Salesforce Automation Framework</h3>
+      <p>Developed a reusable test automation suite using Selenium, Rest Assured, and TestNG.</p>
     </div>
-    <div class="project">
-      <h3>API Regression Suite</h3>
-      <p>Built a robust API test suite using Rest Assured and TestNG, integrated with CI/CD pipelines.</p>
+    <div class="project-card">
+      <h3>Apex Trigger Optimization</h3>
+      <p>Designed bulk-safe Apex triggers and handlers for efficient workflow automation.</p>
     </div>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: jainhardik037@gmail.com</p>
-    <p>Phone: 9413968037</p>
-    <p>Location: Udaipur, Rajasthan</p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/hardikjain037" target="_blank">linkedin.com/in/hardikjain</a></p>
+    <form id="contactForm">
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
+      <textarea placeholder="Your Message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
   </section>
 
   <footer>
-    <p>© 2025 Hardik Jain. All rights reserved.</p>
+    <p>&copy; 2025 Hardik Jain</p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
