--- a/index.html
+++ b/index.html
@@ -9,33 +9,72 @@
 <body>
   <header>
     <h1>Hardik Jain</h1>
-    <p>Salesforce QA | Apex Developer | Automation Specialist</p>
+    <p>Software Development Engineer in Test</p>
     <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
+      <a href="#summary">Summary</a>
+      <a href="#skills">Skills</a>
+      <a href="#experience">Experience</a>
+      <a href="#education">Education</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I’m a results-driven SDET with 4+ years of experience in automation, Salesforce QA, and Apex development. I specialize in scalable testing frameworks and secure coding practices.</p>
+  <section id="summary">
+    <h2>Summary</h2>
+    <p>Dynamic SDET with over 4+ years of experience in quality engineering, known for spearheading automation initiatives that reduced manual testing by 75% and significantly boosted product quality and team efficiency. Proficient in Java, Selenium WebDriver, and API testing using Rest Assured, with hands-on experience in MySQL, CI/CD pipelines via Jenkins and GitHub Action, and SFDC testing. Skilled in TestNG, Cucumber (BDD), and Agile methodologies, with strong command of tools like JIRA, Qtest, and GitHub Copilot.</p>
   </section>
 
-  <section id="projects">
-    <h2>Featured Projects</h2>
-    <div class="project-card">
-      <h3>Salesforce Automation Framework</h3>
-      <p>Developed a reusable test automation suite using Selenium, Rest Assured, and TestNG.</p>
-    </div>
-    <div class="project-card">
-      <h3>Apex Trigger Optimization</h3>
-      <p>Designed bulk-safe Apex triggers and handlers for efficient workflow automation.</p>
-    </div>
+  <section id="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>Java Programming</li>
+      <li>Selenium WebDriver</li>
+      <li>Rest Assured</li>
+      <li>SoapUI</li>
+      <li>MySQL</li>
+      <li>Jenkins</li>
+      <li>GitHub Action</li>
+      <li>SFDC Testing</li>
+      <li>TestNG</li>
+      <li>Cucumber (BDD)</li>
+      <li>Agile methodologies</li>
+      <li>JIRA</li>
+      <li>Qtest</li>
+      <li>GitHub Copilot</li>
+    </ul>
+  </section>
+
+  <section id="experience">
+    <h2>Experience</h2>
+    <h3>Quality Engineering Analyst – Infosys (May 2024 – Present)</h3>
+    <ul>
+      <li>Implemented Selenium WebDriver-based automation framework reducing manual testing by 75%.</li>
+      <li>Led a team of 5 QA Engineers and ensured timely project delivery within SLA.</li>
+      <li>Conducted code reviews and collaborated with cross-functional teams.</li>
+      <li>Designed and executed test plans including UAT and regression testing.</li>
+    </ul>
+
+    <h3>Software Quality Engineer – Infosys (Oct 2021 – May 2024)</h3>
+    <ul>
+      <li>Performed end-to-end testing with manual and automated approaches.</li>
+      <li>Specialized in Salesforce QA and used Selenium Box for test execution.</li>
+      <li>Managed test cases in Jira and Qtest, and led regression testing efforts.</li>
+    </ul>
+  </section>
+
+  <section id="education">
+    <h2>Education</h2>
+    <ul>
+      <li>B.E. in Electronics & Communications – College Of Technology And Engineering (2021)</li>
+      <li>Higher Secondary – St. Gregorios Senior Sec. School (2017)</li>
+    </ul>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
+    <p>Email: jainhardik037@gmail.com</p>
+    <p>Phone: 9413968037</p>
+    <p>Location: Udaipur, Rajasthan</p>
     <form id="contactForm">
       <input type="text" placeholder="Your Name" required />
       <input type="email" placeholder="Your Email" required />
