--- a/index.html
+++ b/index.html
@@ -3,90 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hardik Jain | Portfolio</title>
+  <title>About Me | Hardik Jain</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <h1>Hardik Jain</h1>
     <p>Software Development Engineer in Test</p>
-    <nav>
-      <a href="#summary">Summary</a>
-      <a href="#skills">Skills</a>
-      <a href="#experience">Experience</a>
-      <a href="#education">Education</a>
-      <a href="#contact">Contact</a>
-    </nav>
   </header>
 
-  <section id="summary">
-    <h2>Summary</h2>
-    <p>Dynamic SDET with over 4+ years of experience in quality engineering, known for spearheading automation initiatives that reduced manual testing by 75% and significantly boosted product quality and team efficiency. Proficient in Java, Selenium WebDriver, and API testing using Rest Assured, with hands-on experience in MySQL, CI/CD pipelines via Jenkins and GitHub Action, and SFDC testing. Skilled in TestNG, Cucumber (BDD), and Agile methodologies, with strong command of tools like JIRA, Qtest, and GitHub Copilot.</p>
-  </section>
-
-  <section id="skills">
-    <h2>Skills</h2>
-    <ul>
-      <li>Java Programming</li>
-      <li>Selenium WebDriver</li>
-      <li>Rest Assured</li>
-      <li>SoapUI</li>
-      <li>MySQL</li>
-      <li>Jenkins</li>
-      <li>GitHub Action</li>
-      <li>SFDC Testing</li>
-      <li>TestNG</li>
-      <li>Cucumber (BDD)</li>
-      <li>Agile methodologies</li>
-      <li>JIRA</li>
-      <li>Qtest</li>
-      <li>GitHub Copilot</li>
-    </ul>
-  </section>
-
-  <section id="experience">
-    <h2>Experience</h2>
-    <h3>Quality Engineering Analyst – Infosys (May 2024 – Present)</h3>
-    <ul>
-      <li>Implemented Selenium WebDriver-based automation framework reducing manual testing by 75%.</li>
-      <li>Led a team of 5 QA Engineers and ensured timely project delivery within SLA.</li>
-      <li>Conducted code reviews and collaborated with cross-functional teams.</li>
-      <li>Designed and executed test plans including UAT and regression testing.</li>
-    </ul>
-
-    <h3>Software Quality Engineer – Infosys (Oct 2021 – May 2024)</h3>
-    <ul>
-      <li>Performed end-to-end testing with manual and automated approaches.</li>
-      <li>Specialized in Salesforce QA and used Selenium Box for test execution.</li>
-      <li>Managed test cases in Jira and Qtest, and led regression testing efforts.</li>
-    </ul>
-  </section>
-
-  <section id="education">
-    <h2>Education</h2>
-    <ul>
-      <li>B.E. in Electronics & Communications – College Of Technology And Engineering (2021)</li>
-      <li>Higher Secondary – St. Gregorios Senior Sec. School (2017)</li>
-    </ul>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: jainhardik037@gmail.com</p>
-    <p>Phone: 9413968037</p>
-    <p>Location: Udaipur, Rajasthan</p>
-    <form id="contactForm">
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Your Email" required />
-      <textarea placeholder="Your Message" required></textarea>
-      <button type="submit">Send</button>
-    </form>
+  <section>
+    <h2>About Me</h2>
+    <p>Dynamic SDET with 3.8+ years of experience in automation, Salesforce QA, and Apex development. Known for reducing manual testing by 75% and leading high-impact QA initiatives.</p>
+    <div class="button-group">
+      <a href="experience.html" class="btn">View Experience & Skills</a>
+      <a href="contact.html" class="btn">Contact Me</a>
+    </div>
   </section>
 
   <footer>
     <p>&copy; 2025 Hardik Jain</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
