--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 
   <section>
     <h2>About Me</h2>
-    <p>Dynamic SDET with 3.8+ years of experience in automation, Salesforce QA, and Apex development. Known for reducing manual testing by 75% and leading high-impact QA initiatives.</p>
+    <p>Dynamic SDET with over 4+ years of experience in quality engineering, known for spearheading automation 
+initiatives that reduced manual testing by 75% and significantly boosted product quality and team efficiency. 
+Proficient in Java, Selenium Web Driver, and API testing using Rest Assured, with hands-on experience in MySQL, 
+CI/CD pipelines via Jenkins and GitHub Action, and SFDC testing. Skilled in TestNG, Cucumber (BDD), and Agile 
+methodologies, with strong command of tools like JIRA, Qtest, and GitHub Copilot. Adept at problem-solving and 
+delivering scalable, high-quality automation solutions in fast-paced environments.</p>
     <div class="button-group">
       <a href="experience.html" class="btn">View Experience & Skills</a>
       <a href="contact.html" class="btn">Contact Me</a>
