--- a/experience.html
+++ b/experience.html
@@ -18,12 +18,26 @@
       <li>Implemented Selenium WebDriver automation framework.</li>
       <li>Led a team of 5 QA Engineers.</li>
       <li>Executed test plans including UAT and regression testing.</li>
+      <li>Spearheaded the implementation of a Selenium WebDriver-based automation framework, reducing manual testing efforts by 75% and accelerating release cycles.</li>
+      <li>Led a team of 5 QA Engineers, effectively prioritizing tasks and ensuring timely project delivery within defined SLA parameters.</li>
+      <li>Conducted regular code reviews to uphold coding standards, promote best practices, and maintain high-quality automation scripts.</li>
+      <li>Collaborated with cross-functional teams to integrate automation seamlessly into the development lifecycle, significantly enhancing overall product quality.</li>
+      <li>Designed and executed comprehensive test plans, covering functional, integration, regression, and user acceptance testing (UAT) to validate system behavior against requirements.</li>
+      <li>Identified defects through UI, API, and database testing, and documented detailed test cases and automation scripts to ensure robust, reliable deliverables.</li>
+      <li>Completed unit and regression tests on software and individual modules.</li>
     </ul>
 
     <h3>Software Quality Engineer – Infosys (Oct 2021 – May 2024)</h3>
     <ul>
       <li>Performed end-to-end testing with manual and automated approaches.</li>
       <li>Specialized in Salesforce QA and used Selenium Box.</li>
+      <li>Conducted end-to-end testing of web applications using a combination of manual and automated testing approaches, resulting in a 90% reduction in defects.</li>
+      <li>Developed and executed automated test scripts using Java and Selenium, contributing to the efficiency of the testing process and ensuring the reliability of software releases.</li>
+      <li>Utilized Selenium Box for test execution, managing test environments, and optimizing overall testing workflows.</li>
+      <li>Specialized in Salesforce QA (SFDC-QA), ensuring the quality of Salesforce implementations through thorough testing and validation.</li>
+      <li>Implemented and maintained test cases in Jira and Qtest, providing comprehensive test coverage and efficient test case management.</li>
+      <li>Collaborated with development teams to understand system architecture and design test cases aligned with software requirements.</li>
+      <li>Led regression testing efforts to validate the stability of software releases and prevent the introduction of new defects.</li>
     </ul>
 
     <h2>Skills</h2>
