--- a/experience.html
+++ b/experience.html
@@ -48,7 +48,7 @@
     </ul>
 
     <a href="index.html" class="btn">Back to About Me</a>
-    <a href="contact.html" class="contact-button">Contact Me</a>
+    <a href="contact.html" class="btn">Contact Me</a>
   </section>
 
   <footer>
